Add main HTML layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-placeholder
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CAPulse</title>
+
+  <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="style.css" />
+
+  <meta name="theme-color" content="#0f172a" />
+</head>
+<body>
+  <header>
+    <h1>CA Pulse</h1>
+    <p>Relevant finance & compliance news for CA professionals</p>
+  </header>
+
+  <main id="news"></main>
+
+  <footer>
+    <p>© CAPulse.live</p>
+  </footer>
+
+  <script src="app.js"></script>
+</body>
+</html>
